--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -35,6 +35,12 @@
   opacity: 0.6;
 }
 
+.movies__card-list-text {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
 @media screen and (max-width: 1023px) {
   .movies {
     width: calc(100% - 60px);
