--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -17,6 +17,12 @@
   max-width: 410px;
 }
 
+.profile__form {
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
 .profile__field {
   margin: 0 0 17px 0;
   padding: 0 0 16px 0;
@@ -24,6 +30,7 @@
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
+  border: none;
   border-bottom: 1px solid #E8E8E8;
   font-weight: 500;
   font-size: 11px;
