--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,4 @@
 @import url(./components/AuthForm/AuthForm.css);
 @import url(./components/Profile/Profile.css);
 @import url(./components/NotFound/NotFound.css);
+@import url(./components/InfoTooltip/InfoTooltip.css);
